# course-oop-i

-p5-2/: CMakeLists.txt  TournamentMember.cpp  TournamentMember.h  main.cpp
build-p5-1-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  p5-1
build-p6-1-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  p6-1
hello_world/: Makefile  hello_world.mk  hello_world.project  hello_world.workspace  main.cpp
p3-1/: City.cpp  Makefile  p3-1.mk  p3-1.project  p3-1.txt  p3-1.workspace  testcity.cpp
p3-1/Debug/: City.cpp.o.d  (+2 more)
p3-2/: Critter.cpp  Critter.h  testcritter  testcritter.cpp
p3-3/: Critter.cpp  Critter.h  testcritter
p3-4/: Critter.cpp  Critter.h  testcritter  testcritter.cpp
p3-5/: copyconstructor  copyconstructor.cpp
p3-6/: Complex.cpp  Complex.h  testcomplex  testcomplex.cpp
p4-1/: Box.cpp  Box.h  testbox  testbox.cpp
p4-2/: creature  creature.cpp
p4-3/: Creature.h  creature  testcreature.cpp
p4-4/: Creature.cpp  creature  dyncreature.cpp
p4-5/: Shapes.cpp  Shapes.h  shapes  testshapes.cpp
p4-6/: Vector.cpp  Vector.h  testvector  testvector.cpp
p5-1/: Shapes.cpp  Shapes.h  main.cpp  p5-1.pro
p5-3/: CMakeLists.txt  TournamentMember.cpp  TournamentMember.h  main.cpp
p5-4/: CMakeLists.txt  TournamentMember.cpp  TournamentMember.h  main.cpp
p5-5/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
p6-1/: main.cpp
p6-2/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
p6-3/: Area.cpp  Area.h  CMakeLists.txt  Circle.cpp  Circle.h  Ring.cpp  Square.cpp  main.cpp
p6-4/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  Ring.h  Square.h  main.cpp
(+6 files in other folders)
